procedure 2 working so far

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       crossorigin="anonymous"
     ></script> -->
     <!-------------------------------------- JavaScript Attach -------------------------------->
-    <script src="js/app.js"></script>
+    <script src="js/app1.js"></script>
     <!----------------End ---------------->
   </body>
 </html>
