Refactorized  and Works

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
           <img src="images/mac.png" alt="" />
         </div>
         <div class="col-lg-6 col-md-6">
+
+          <!------------------------- Hero Section -------------------------->
+
           <h1>Customize your Blue 24-inch Mac with Apple M1 chip.</h1>
           <p>
             Apple M1 chip with 8-core CPU with 4 performance cores and 4
@@ -69,6 +72,7 @@
           </button>
 
           <!------------------------- Delivery -------------------------->
+
           <p class="pt-5"><strong>Choose your delivery option</strong></p>
           <button id="deliveryFree" type="button" class="btn btn-outline-dark">
             Friday, Aug 25 FREE Prime Delivery
@@ -78,6 +82,7 @@
           </button>
 
           <!------------------------- pricing table ------------------------->
+
           <table class="mt-5 table">
             <tbody>
               <tr>
@@ -106,8 +111,6 @@
             </tfoot>
           </table>
 
-          <!----------------table end ---------------->
-
           <!----------------Promo Code Table ---------------->
 
           <div class="promo-section mt-4">
@@ -130,17 +133,13 @@
       <!----------------Total Section ---------------->
       <h2 class="text-center mt-3">Total: $ <span id ="grand-total">1299</span></h2>
 
-      <!----------------Content End---------------->
+      <!----------------Design ends---------------->
     </div>
 
-    <!-------------------------------------- Bootstrap CDN JS -------------------------------->
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-      crossorigin="anonymous"
-    ></script> -->
-    <!-------------------------------------- JavaScript Attach -------------------------------->
+    <!------------------ JavaScript Attached -------------------->
+
     <script src="js/app1.js"></script>
+
     <!----------------End ---------------->
   </body>
 </html>
