--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mac Book Pro</title>
+    <link rel="shortcut icon" href="images/fav.png" type="image/x-icon">
 
     <!---------------- Bootstrap CDN CSS ---------------->
     <link
@@ -138,7 +139,7 @@
 
     <!------------------ JavaScript Attached -------------------->
 
-    <script src="js/app1.js"></script>
+    <script src="js/app.js"></script>
 
     <!----------------End ---------------->
   </body>
